Validation for Culture Palace, Theatre, Concert Hall, Cinema.

--- a/src/main/resources/public/cinema.html
+++ b/src/main/resources/public/cinema.html
@@ -148,6 +148,7 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/cinema.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 
 
