--- a/src/main/resources/public/concert_in_hall.html
+++ b/src/main/resources/public/concert_in_hall.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </div>
-    <!-- Додавання артиста -->
+    <!-- Додавання  -->
     <div id="addModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -88,16 +88,12 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Назва: </label>
-                    <input type="text" id="ConcertInHallName" name="ConcertInHallName" /> <br>
-                    <label>Культурний палац: </label> <br>
-                    <select id="ConcertInHallConcertHall" name="updateConcertInHallConcertHall" >
-
-                    </select> <br>
-                    <label>Організатор: </label> <br>
-                    <select id="ConcertInHallOrganizer" name="updateConcertInHallOrganizer" ></select> <br>
-                    <label>Дата: </label>
-                    <input type="date" name ="updateDate" id="datePicker"/> <br>
+                    <input class="data" type="text" id="ConcertInHallName" name="ConcertInHallName" placeholder="Назва" title="Назва"/> <br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px;" id="wrongName"></span><br>
+                    <select class="data" id="ConcertInHallConcertHall" name="ConcertInHallConcertHall" title="Концертна площадка"></select> <br><br>
+                    <select class="data" id="ConcertInHallOrganizer" name="ConcertInHallOrganizer" title="Організатор"></select> <br><br>
+                    <input class="data" type="date" name ="date" id="datePicker" title="Дата"/> <br>
+                    <span class="error cinemamovie" style="color: #c00000; text-align: left; font-size: 14px;" id="wrongDate"></span><br>
 
                 </div>
                 <div class="modal-footer">
@@ -109,7 +105,7 @@
         </div>
     </div>
 
-    <!-- Редагування артиста -->
+    <!-- Редагування  -->
     <div id="editModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -118,19 +114,16 @@
                     <h4 class="modal-title">Редагування</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Назва: </label>
-                    <input type="text" id="updateConcertInHallName" name="updateConcertInHallName" /> <br>
-                    <label>Концертна площадка: </label> <br>
-                    <select id="updateConcertInHallConcertHall" name="updateConcertInHallConcertHall" >
+                    <input class="data" type="text" id="updateConcertInHallName" name="updateConcertInHallName" placeholder="Назва" title="Назва"/> <br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px;" id="editWrongName"></span><br>
+                    <select class="data" id="updateConcertInHallConcertHall" name="updateConcertInHallConcertHall" title="Концертна площадка"></select> <br><br>
+                    <select class="data" id="updateConcertInHallOrganizer" name="updateConcertInHallOrganizer" title="Організатор"></select> <br><br>
+                    <input class="data" type="date" name ="date" id="updateDatePicker" title="Дата"/> <br>
+                    <span class="error cinemamovie" style="color: #c00000; text-align: left; font-size: 14px;" id="editWrongDate"></span><br>
 
-                    </select> <br>
-                    <label>Організатор: </label> <br>
-                    <select id="updateConcertInHallOrganizer" name="updateConcertInHallOrganizer" ></select> <br>
-                    <label>Дата: </label>
-                    <input type="date" name ="updateDate" id="updateDatePicker"/> <br>
-                    <button id="updateConcertInHallButton" ng-click="concertInHallCtrl.updateConcertInHall()">Змінити</button>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="updateConcertInHallButton" ng-click="concertInHallCtrl.updateConcertInHall()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -205,6 +198,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/concert_in_hall.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 </body>
 </html>
