--- a/src/main/resources/public/contest_in_palace.html
+++ b/src/main/resources/public/contest_in_palace.html
@@ -88,16 +88,12 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Назва: </label>
-                    <input type="text" id="ContestInPalaceName" name="ContestInPalaceName" /> <br>
-                    <label>Культурний палац: </label> <br>
-                    <select id="ContestInPalaceCulturePalace" name="updateContestInPalaceCulturePalace" >
-
-                    </select> <br>
-                    <label>Організатор: </label> <br>
-                    <select id="ContestInPalaceOrganizer" name="updateContestInPalaceOrganizer" ></select> <br>
-                    <label>Дата: </label>
-                    <input type="date" name ="updateDate" id="datePicker"/> <br>
+                    <input class="data" type="text" id="ContestInPalaceName" name="updateConcertInHallName" placeholder="Назва" title="Назва"/> <br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px;" id="wrongName"></span><br>
+                    <select class="data" id="ContestInPalaceCulturePalace" name="updateConcertInHallConcertHall" title="Палац культури"></select> <br><br>
+                    <select class="data" id="ContestInPalaceOrganizer" name="updateConcertInHallOrganizer" title="Організатор"></select> <br><br>
+                    <input class="data" type="date" name ="date" id="datePicker" title="Дата"/> <br>
+                    <span class="error cinemamovie" style="color: #c00000; text-align: left; font-size: 14px;" id="wrongDate"></span><br>
 
                 </div>
                 <div class="modal-footer">
@@ -118,16 +114,12 @@
                     <h4 class="modal-title">Редагування</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Назва: </label>
-                    <input type="text" id="updateContestInPalaceName" name="updateContestInPalaceName" /> <br>
-                    <label>Концертна площадка: </label> <br>
-                    <select id="updateContestInPalaceCulturePalace" name="updateContestInPalaceCulturePalace" >
-
-                    </select> <br>
-                    <label>Організатор: </label> <br>
-                    <select id="updateContestInPalaceOrganizer" name="updateContestInPalaceOrganizer" ></select> <br>
-                    <label>Дата: </label>
-                    <input type="date" name ="updateDate" id="updateDatePicker"/> <br>
+                    <input class="data" type="text" id="updateContestInPalaceName" name="updateConcertInHallName" placeholder="Назва" title="Назва"/> <br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px;" id="editWrongName"></span><br>
+                    <select class="data" id="updateContestInPalaceCulturePalace" name="updateConcertInHallConcertHall" title="Палац культури"></select> <br><br>
+                    <select class="data" id="updateContestInPalaceOrganizer" name="updateConcertInHallOrganizer" title="Організатор"></select> <br><br>
+                    <input class="data" type="date" name ="date" id="updateDatePicker" title="Дата"/> <br>
+                    <span class="error cinemamovie" style="color: #c00000; text-align: left; font-size: 14px;" id="editWrongDate"></span><br>
 
                 </div>
                 <div class="modal-footer">
@@ -206,6 +198,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/contest_in_palace.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 </body>
 </html>
