--- a/src/main/resources/public/organizer.html
+++ b/src/main/resources/public/organizer.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <!-- Додавання артиста -->
+    <!-- Додавання  -->
     <div id="addModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -85,9 +85,9 @@
                 </div>
                 <div class="modal-body">
                     <input class="data" type="text" id="organizerName" placeholder="Введіть ім'я" title="Ім'я"/><br>
-                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongName"></span><br><br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongName"></span><br>
                     <input class="data" type="number" min="18" id="age" placeholder="Введіть вік" title="Вік"/><br>
-                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongAge"></span><br><br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongAge"></span><br>
                     <input class="data" type="number" min="0" id="experience" placeholder="Введіть досвід" title="Досвід"/><br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongExperience"></span>
                 </div>
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <!-- Редагування артиста -->
+    <!-- Редагування  -->
     <div id="editModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
