--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <!-- Додавання артиста -->
+    <!-- Додавання  -->
     <div id="addModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <!-- Редагування артиста -->
+    <!-- Редагування  -->
     <div id="editModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
