--- a/src/main/resources/public/concert_hall.html
+++ b/src/main/resources/public/concert_hall.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <!-- Додавання артиста -->
+    <!-- Додавання  -->
     <div id="addModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <!-- Редагування артиста -->
+    <!-- Редагування  -->
     <div id="editModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
