--- a/src/main/resources/public/contest_results.html
+++ b/src/main/resources/public/contest_results.html
@@ -168,6 +168,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/contest_results.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 </body>
 </html>
