--- a/src/main/resources/public/organizer.html
+++ b/src/main/resources/public/organizer.html
@@ -39,7 +39,9 @@
                     <div class="dropdown">
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
-                            <a href="" data-toggle="modal" data-target="#selectAndCountOfEvents">Список організаторів та кількість проведених ними заходів</a>
+                            <a href="" data-toggle="modal" data-target="#selectAndCountOfEvents">Список організаторів та кількість проведених ними концертів протягом періоду</a>
+                            <a href="" data-toggle="modal" data-target="#selectByAge">Список організаторів за вказаним віком</a>
+                            <a href="" data-toggle="modal" data-target="#selectByExperience">Список організаторів за вказаним досвідом</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +53,7 @@
                     <th>Ім'я</th>
                     <th>Вік (р)</th>
                     <th>Досвід (р)</th>
-                    <th hidden id="count"></th>
+                    <th id="count"></th>
                     <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal">✚</button></th>
                 </tr>
             </thead>
@@ -63,7 +65,7 @@
                 <td>{{item.name}}</td>
                 <td>{{item.age}}</td>
                 <td>{{item.experience}}</td>
-                <td hidden class="dataCount"></td>
+                <td id="countData">{{item.concertCount}}</td>
                 <td>
                     <button id="update" ng-click="organizerCtrl.startUpdateOrganizer(item.id, item.name, item.age, item.experience)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
                     <button id="delete" ng-click="organizerCtrl.deleteOrganizer(item.id)" class="btn-danger">❌</button>
@@ -130,18 +132,55 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Вибір споруд</h4>
+                    <h4 class="modal-title">Вибір дати</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Палаци<input type="radio" name="place" id="palace"></label> <br>
-                    <label>Театри<input type="radio" name="place" id="theatre"></label> <br>
-                    <label>Концертні площадки<input type="radio" name="place" id="hall"></label><br>
                     <label>Від:<br><input type="date" name ="Перша дата" id="firstDate"/> </label><br>
                     <label>До: <br><input type="date" name ="Друга дата" id="secondDate"/> </label><br>
 
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default" id="selectAndCountOfEventsBtn" ng-click="organizerCtrl.selectAndCountOfEvents()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="selectByAge" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір віку</h4>
+                </div>
+                <div class="modal-body">
+                    <input type="number" min="18" name ="Вік" id="ageRequest" title="Вік" placeholder="Вік"/>
+                    <label><input id="ageLess" class="radio" type="radio" name="age"><</label>
+                    <label><input id="ageMoreEquals" class="radio"type="radio" name="age">>=</label>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="selectByAgeBtn" ng-click="artistCtrl.selectByAge()" data-dismiss="modal">Вивести</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="selectByExperience" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Вибір досвіду</h4>
+                </div>
+                <div class="modal-body">
+                    <input type="number" min="18" name ="Вік" id="experienceRequest" title="Досвід" placeholder="Досвід"/>
+                    <label><input id="experienceLess" class="radio" type="radio" name="age"><</label>
+                    <label><input id="experienceMoreEquals" class="radio"type="radio" name="age">>=</label>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" id="selectByExperienceBtn" ng-click="artistCtrl.selectByExperience()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
