QUERIES for Artist, Organizer and Impresario (select by age and experience).

--- a/src/main/resources/public/impresario.html
+++ b/src/main/resources/public/impresario.html
@@ -156,7 +156,7 @@
                     <label><input id="ageMoreEquals" class="radio"type="radio" name="age">>=</label>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="selectByAgeBtn" ng-click="artistCtrl.selectByAge()" data-dismiss="modal">Вивести</button>
+                    <button class="btn btn-default" id="selectByAgeBtn" ng-click="impresarioCtrl.selectByAge()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                     <label><input id="experienceMoreEquals" class="radio"type="radio" name="age">>=</label>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="selectByExperienceBtn" ng-click="artistCtrl.selectByExperience()" data-dismiss="modal">Вивести</button>
+                    <button class="btn btn-default" id="selectByExperienceBtn" ng-click="impresarioCtrl.selectByExperience()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
