--- a/src/main/resources/public/organizer.html
+++ b/src/main/resources/public/organizer.html
@@ -160,7 +160,7 @@
                     <label><input id="ageMoreEquals" class="radio"type="radio" name="age">>=</label>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="selectByAgeBtn" ng-click="artistCtrl.selectByAge()" data-dismiss="modal">Вивести</button>
+                    <button class="btn btn-default" id="selectByAgeBtn" ng-click="organizerCtrl.selectByAge()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                     <label><input id="experienceMoreEquals" class="radio"type="radio" name="age">>=</label>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="selectByExperienceBtn" ng-click="artistCtrl.selectByExperience()" data-dismiss="modal">Вивести</button>
+                    <button class="btn btn-default" id="selectByExperienceBtn" ng-click="organizerCtrl.selectByExperience()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
